@@ -1,3 +1,11 @@
+2017-03-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-647
+
+	* src/m_surface.cc: Added the option ignore_surface_slope.
+
+	(iySurfaceFastem): Adopted call of specular_losCalc.
+
 2017-03-03 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-646
